# hmpps-ems-platform-terraform-tgw-propagated-route-monitor

./: .gitignore  CONTRIBUTING.md  README.md  main.tf  outputs.tf  variables.tf
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: documentation.yml  pull-request.yml  static-analysis.yml
.github/workflows/assets/: test-provider.tf
function/: README.md  pyproject.toml
function/src/: lambda_handler.py
function/tests/: lambda_handler_test.py
